Primera entrega Unidad 2 CRUD sección 002D

--- a/catalogo/templates/base.html
+++ b/catalogo/templates/base.html
@@ -77,6 +77,11 @@
 	<h5> IvyStore.com es un fansite. No somos marca oficial de Pokemon de ninguna forma, no estamos afiliados, auspiciados, o de alguna forma involucrados con Pokemon, Creatures, GAMEFREAK, o TPCi.</h5>
 	<h5>	Todo el contenido original de IvyStore.com esta registrado bajo nuestro nombre. </h5>
 </div>
+
+    <form action="/accounts/login/" method="get">
+    <input type="submit" value="Iniciar Sesión" 
+         name="Submit" id="frm1_submit" />
+</form>
 		<script src="{ % static 'js\bootstrap.min.js'%}"></script>
 
   
