--- a/catalogo/templates/index.html
+++ b/catalogo/templates/index.html
@@ -15,6 +15,14 @@
     <li><strong>Total disponible:</strong> {{ num_instances_disponible }}</li>
     <li><strong>Coleccion:</strong> {{ num_coleccion }}</li>
     <li><strong>Numero de visitas:</strong> {{ num_visits }}</li>
+
+    <form action="/coleccion/create" method="get">
+    <input type="submit" value="Crear Articulo" 
+         name="Submit" id="frm1_submit" />
+</form>
+
+
+
     
   </ul>
 
